--- a/src/main/resources/assets/moretimecapsulesmod/lang/en_us.json
+++ b/src/main/resources/assets/moretimecapsulesmod/lang/en_us.json
@@ -1,10 +1,10 @@
 {
-  "texvar.tardis.wardrobe.acaica": "Acacia",
-  "texvar.tardis.wardrobe.crimson": "Crimson",
-  "texvar.tardis.wardrobe.darkoak2": "DarkOak Panels, Spruce Log",
-  "texvar.tardis.wardrobe.darkoak": "Dark Oak",
-  "texvar.tardis.wardrobe.jungle": "Jungle",
-  "texvar.tardis.wardrobe.oak2": "Oak Panels, Spruce Log",
-  "texvar.tardis.wardrobe.spruce": "Spruce",
-  "texvar.tardis.wardrobe.warped": "Warped"
+  "texvariants.tardis.wardrobe.acaica": "Acacia",
+  "texvariants.tardis.wardrobe.crimson": "Crimson",
+  "texvariants.tardis.wardrobe.darkoak2": "DarkOak Panels, Spruce Log",
+  "texvariants.tardis.wardrobe.darkoak": "Dark Oak",
+  "texvariants.tardis.wardrobe.jungle": "Jungle",
+  "texvariants.tardis.wardrobe.oak2": "Oak Panels, Spruce Log",
+  "texvariants.tardis.wardrobe.spruce": "Spruce",
+  "texvariants.tardis.wardrobe.warped": "Warped"
 }
